Login page and page names

--- a/500.html
+++ b/500.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>File not found</title>
+		<title>Lenka</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/styles/main.css" />
 	</head>
 	<body>
 		<div class="shadow">
 			<div class="marker left-text non-scroll"><a href="/">[Go to root]</a></div>
-			<div class="center">404: file not found</div>
+			<div class="center">500: internal server error</div>
 			<div class="bottom">Art by <a href="https://www.pixiv.net/en/artworks/75830167">wounds</a>.</div>
 		</div>
 	</body>
