--- a/403.html
+++ b/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lenka</title>
+		<title>Access denied</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/styles/main.css" />
 	</head>
