Add key to index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="shadow">
 			<div class="marker">
-				I’m Lenka and this is my page. There are many like it, but this one is mine.<br>
+				I’m Lenka and this is my <a href="/lenka.asc">key</a>. There are many like it, but this one is mine.<br>
 				You can contact me using <a href="xmpp:iam@lenka.moe">xmpp</a> and <a href="mailto:lenka@airmail.cc">email</a>.
 			</div>
 			<div class="bottom">Art by <a href="https://www.pixiv.net/en/artworks/75830167">wounds</a>.</div>
