--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="shadow">
 			<div class="marker">
 				I’m Lenka and this is my <a href="/lenka.asc">key</a>. There are many like it, but this one is mine.<br>
-				You can contact me using <a href="xmpp:iam@lenka.moe">xmpp</a> and <a href="mailto:lenka@airmail.cc">email</a>. Signed OMEMO <a href="/omemo.txt">fingerprints</a> also available.
+				You can contact me using <a href="xmpp:nyan@lenka.moe">xmpp</a> and <a href="mailto:lenka@airmail.cc">email</a>. Signed OMEMO <a href="/omemo.txt">fingerprints</a> also available.
 			</div>
 			<div class="bottom">Art by <a href="https://www.pixiv.net/en/artworks/75830167">wounds</a>.</div>
 		</div>
