Add hidden mastodon link.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			</div>
 			<div class="bottom">Art by <a href="https://www.pixiv.net/en/artworks/75830167">wounds</a>.</div>
 		</div>
+		<a class="me-link" rel="me" href="https://social.privacytools.io/@lenka">Mastodon</a>
 	</body>
 </html>
 
