Move mastodon link.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 	<body>
 		<div class="shadow">
 			<div class="marker">
-				I’m Lenka and this is my <a href="/lenka.asc">key</a>. There are many like it, but this one is mine.<br>
+				I’m <a rel="me" href="https://social.privacytools.io/@lenka">Lenka</a> and this is my <a href="/lenka.asc">key</a>. There are many like it, but this one is mine.<br>
 				You can contact me using <a href="xmpp:nyan@lenka.moe">xmpp</a> and <a href="mailto:lenka@airmail.cc">email</a>. Signed OMEMO <a href="/omemo.txt">fingerprints</a> also available.
 			</div>
 			<div class="bottom">Art by <a href="https://www.pixiv.net/en/artworks/75830167">wounds</a>.</div>
 		</div>
-		<a class="me-link" rel="me" href="https://social.privacytools.io/@lenka">Mastodon</a>
 	</body>
 </html>
 
