Update artwork link

--- a/400.html
+++ b/400.html
@@ -9,7 +9,7 @@
 		<div class="shadow">
 			<div class="marker left-text non-scroll"><a href="/">[Go to root]</a></div>
 			<div class="center">400: bad request</div>
-			<div class="bottom">Art by <a href="https://www.pixiv.net/en/artworks/75830167">wounds</a>.</div>
+			<div class="bottom right-text">Artwork by <a href="https://www.pixiv.net/en/users/38278168"><img src="/images/pixiv.ico" width="10em" height="10em">wounds</a>.</div>
 		</div>
 	</body>
 </html>
