--- a/files.html
+++ b/files.html
@@ -10,7 +10,7 @@
 			<div class="marker">
 				It's so empty and lonely here...
 			</div>
-			<div class="bottom">Art by <a href="https://www.pixiv.net/en/artworks/75830167">wounds</a>.</div>
+			<div class="bottom right-text">Artwork by <a href="https://www.pixiv.net/en/users/38278168"><img src="/images/pixiv.ico" width="10em" height="10em">wounds</a>.</div>
 		</div>
 	</body>
 </html>
