--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="shadow">
 			<div class="marker mediarules">
-				I’m <a rel="me" href="https://social.privacytools.io/@lenka">Lenka</a> and this is my <a href="/lenka.asc">key</a>. There are many like it, but this one is mine.<br>
+				I’m <a rel="me" href="https://expired.mentality.rip/lenka">Lenka</a> and this is my <a href="/lenka.asc">key</a>. There are many like it, but this one is mine.<br>
 				You can contact me using <a href="xmpp:nyan@lenka.moe?omemo-sid-14531938=8addca770ae1d2bb628e034a2cd2fe24ce708d842089d6504ade05b396ae0a42;omemo-sid-9967=15ddd5da548442860b71dc1fcc01041650ecad469a48afa5dbfa8538d7aa7842;omemo-sid-1296087454=15054877e3b0ceb010c4a989c313c74216edc03730fc66146c6d7b1528c0732f;omemo-sid-14089=bc471c7ddcfe67c49e19c77fb20cf5d097a856f6084917abe042d45b82ce8a6b">xmpp</a> and <a href="mailto:nyan@lenka.moe">email</a>. Signed OMEMO <a href="/omemo">fingerprints</a> also available.
 			</div>
 			<div class="bottom right-text">Artwork by <a href="https://www.pixiv.net/en/users/38278168"><img src="/images/pixiv.ico" width="10em" height="10em">wounds</a>.</div>
